ConsultingHub/force-app/main/default/objects/Stage_Activity__c/Stage_Activity__c.object-meta.xml
<CustomObject>
    <description>This is a reference object of activities that are tied to specific Phase and Stage of an Engagement Type.</description>
    <label>Stage Activity</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>