ConsultingHub/force-app/main/default/objects/Stage_Activity__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The activity detail</description>
    <label>Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>