ConsultingHub/force-app/main/default/objects/Stage_Activity__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <label>Domain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>CPQ</fullName>
            </value>
            <value>
                <fullName>Salesforce Field Service</fullName>
            </value>
            <value>
                <fullName>Einstein Analytics</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Pardot</fullName>
            </value>
            <value>
                <fullName>Platform Cloud</fullName>
            </value>
            <value>
                <fullName>Service Cloud Einstein</fullName>
            </value>
            <value>
                <fullName>Experience Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>