ConsultingHub/force-app/main/default/objects/Stage_Activity__c/fields/Resources_and_Templates__c.field-meta.xml
<CustomField>
    <fullName>Resources_and_Templates__c</fullName>
    <label>Resources and Templates</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>