ConsultingHub/force-app/main/default/objects/Stage_Activity__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <referenceTo>ia_Deliverable__c</referenceTo>
    <relationshipName>Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>