ConsultingHub/force-app/main/default/objects/Stage_Activity__c/fields/Stage_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Stage_Sort_Order__c</fullName>
    <label>Stage Sort Order</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>