ConsultingHub/force-app/main/default/objects/Stage_Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Stage_Sort_Order__c</columns>
    <columns>Stage__c</columns>
    <columns>Description__c</columns>
    <columns>Output__c</columns>
    <columns>Resources_and_Templates__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>